# libdecodeqr

./: .gitignore  CMakeLists.txt
libdecodeqr/: imagereader.cpp
